--- a/provisioning/ansible/competitor.yaml
+++ b/provisioning/ansible/competitor.yaml
@@ -10,8 +10,8 @@
     - role: web-ruby
     - role: web-rust
     - role: web-deno
-    # - role: web-php
-    # - role: web-perl
+    - role: web-php
+    - role: web-perl
     - role: web-python
     - role: web-prepare
     - role: remove
